<resources>
    <string name="app_name">Recargas App</string>
    <string name="regist">Registro De Usuario</string>
    <string name="inicio">Iniciar Sesión</string>
    <string name="exits">Salir</string>
    <string name="nom">Nombre</string>
    <string name="ape">Apellido</string>
    <string name="cedula">Numero de Cedula de ciudadania</string>
    <string name="email">Correo Electronico</string>
    <string name="pass">Clave</string>
    <string name="gen">Genero:</string>
    <string name="ini">Inicio</string>
    <string name="recar">Recarga</string>
    <string name="portal">Portal Laboral</string>
    <string name="recarg">Realizar Recargar</string>
    <string name="nume">Numero Telefonico</string>
    <string name="mont">Monto a recargar</string>
    <string name="opera">Tipo de Operador:</string>
    <string name="confir">Confirmar Recarga</string>
    <string name="can">Cancelar Recarga</string>
</resources>